@@ -34,7 +34,7 @@ public class BindingsGenerator {
         try (FileWriter writer = new FileWriter(basePath + "JVMCallbacks.java")) {
             writer.write("package " + gir.namespace.packageName + ";\n");
             writer.write("\n");
-            writer.write("import jdk.incubator.foreign.*;\n");
+            writer.write("import java.lang.foreign.*;\n");
             writer.write("import io.github.jwharm.javagi.*;\n");
             writer.write("import static io.github.jwharm.javagi.interop.jextract.gtk_h.C_INT;\n");
             writer.write("\n");
