@@ -133,7 +133,7 @@ public class Conversions {
             case "gfloat" -> "float";
             case "none" -> "void";
             case "utf8", "filename" -> "java.lang.String";
-            case "gpointer", "gconstpointer" -> "jdk.incubator.foreign.MemoryAddress";
+            case "gpointer", "gconstpointer" -> "java.lang.foreign.MemoryAddress";
             case "gtype" -> qualified ? toQualifiedJavaType("GObject.Type") : toSimpleJavaType("GObject.Type");
             default -> qualified ? toQualifiedJavaType(name) : toSimpleJavaType(name);
         };
